--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,12 +5,21 @@
 
 <!DOCTYPE html>
 
-<html>
+<html lang="pt-br">
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Foo</title>
+    <title>FinLeo</title>
 </head>
 <body>
-    <p>Foo</p>
+    <p>FinLeo</p>
+
+    <!-- Core JS Files   -->
+    <script src="/lib/jquery/jquery-1.10.2.js" type="text/javascript"></script>
+    <script src="/lib/bootstrap/tether.min.js"></script>
+    <script src="/lib/bootstrap/bootstrap.min.js" type="text/javascript"></script>
+
+    <!-- App JS Files   -->
+    <script src="/lib/angular/angular.min.js"></script>
+    <script src="/lib/angular/angular-ui-router.min.js"></script>
 </body>
 </html>
