mudancas na view

--- a/wwwroot/views/index.html
+++ b/wwwroot/views/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" ng-app="templating_app">
 <head>
     <meta charset="utf-8" />
@@ -26,6 +26,7 @@
 <body>
     <div class="wrapper">
         <div class="main-panel">
+            alok
             <div class="content">
                 <ui-view>
                     <p>
