--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,5 +24,6 @@
     <script src="~/js/app/routing.js"></script>
     <script src="~/js/app/home/home.controller.js"></script>
     <script src="~/js/app/home/transacao/transacao.js"></script>
+    <script src="~/js/app/home/conta/conta.js"></script>
 </body>
 </html>
